<resources>
    <string name="app_name">VPlan</string>
    <string name="action_settings">Einstellungen</string>
    <string name="settings_kurse_actionbar_title">Belegte Kurse auswählen</string>
    <string name="vplanUrl" translatable="false">http://www.kantgym-leipzig.de/App/mobdaten/Klassen.xml</string>

    <string name="prefTitleKlasse">Klasse</string>
    <string name="prefTitleKurs">Kurse</string>
    <string name="prefSubTitleKurs">Auswahl der belegten Kurse</string>
    <string name="prefKeyKlasse" translatable="false">klasse</string>
    <string name="prefDefKlasse" translatable="false">5a</string>
    <string name="prefKeyKurs" translatable="false">kurs</string>
    <string name="prefTitleDoppelstunde">Doppelstunden oder Blöcke</string>
    <string name="prefSummaryDoppelstundeOn">Doppelstunden werden zu Blöcken zusammengefasst.</string>
    <string name="prefSummaryDoppelstundeOff">Alle Stunden werden separat angezeigt.</string>
    <string name="prefKeyDoppelstunde" translatable="false">komprDoppelStd</string>
    <string name="prefTitleSendNotification">Benachrichtigung anzeigen</string>
    <string name="prefSummarySendNotificationOn">Bei aktualisiertem Stundenplan wird eine Benachrichtigung anzeigt.</string>
    <string name="prefSummarySendNotificationOff">Bei aktualisiertem Stundenplan wird keine Benachrichtigung anzeigt.</string>
    <string name="prefKeySendNotification" translatable="false">sendNotification</string>
    <string name="prefTitleDoSyncAutomatically">Aktualisierung</string>
    <string name="prefSummaryDoSyncAutomaticallyOn">Automatische Aktualisierung des Stundenplans ist aktiviert.</string>
    <string name="prefSummaryDoSyncAutomaticallyOff">Automatische Aktualisierung des Stundenplans deaktiviert.</string>
    <string name="prefKeyDoSyncAutomatically" translatable="false">doSyncAutomatically</string>

    <string name="lbl_actionbar_title_klasse">Klasse</string>
    <string name="lblBlock">. Block</string>
    <string name="lblStunde">. Stunde</string>
    <string name="notificationTitle">Vertretungsplan</string>
    <string name="notificationTextKlasse">Vertretungsplan für Klasse %s aktualisiert!</string>
    <string name="notificationTextZusInfo">Die zusätzlichen Informationen wurden aktualisiert!</string>
    <string name="notificationTextNeuerTag">Vertretungsplan für %s wurde eingestellt!</string>
    <string name="syncDisabledWarning">Achtung! Aktualisierung deaktiviert. Angezeigte Daten können veraltet sein!</string>

    <string name="vplan_provider_authority" translatable="false">com.strobelb69.vplan</string>
    <string name="vplan_authenticator_account_type" translatable="false">kantgym-leipzig.de</string>

    <string name="lblTimestamp">Stand vom</string>
    <string name="lblLastSync">, letzter Download vom Server</string>
    <string name="strNoZusinfo">Keine weiteren Informationen. Bitte gegebenenfalls Aushänge beachten!</string>
</resources>
