<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="@string/prefTitleKlasse"
        android:key="@string/prefKeyKlasse"/>
    <Preference
        android:title="@string/prefTitleKurs"
        android:key="@string/prefKeyKurs"
        >
        <intent
            android:targetClass="com.strobelb69.vplan.SettingsActivity"
            android:targetPackage="com.strobelb69.vplan"
            android:data="preferences://com.strobelb69.vplan/kurse"
            />
        </Preference>
    <SwitchPreference
        android:title="@string/prefTitleDoppelstunde"
        android:key="@string/prefKeyDoppelstunde"
        android:defaultValue="true"/>
    <SwitchPreference
        android:title="@string/prefTitleSendNotification"
        android:key="@string/prefKeySendNotification"
        android:defaultValue="true"/>
    <SwitchPreference
        android:title="@string/prefTitleDoSyncAutomatically"
        android:key="@string/prefKeyDoSyncAutomatically"
        android:defaultValue="true"/>
</PreferenceScreen>